--- a/PhotoJournalApp/Supporting Files/Base.lproj/Main.storyboard
+++ b/PhotoJournalApp/Supporting Files/Base.lproj/Main.storyboard
@@ -33,9 +33,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="276" height="275"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uDW-z7-vhW">
-                                                    <rect key="frame" x="18" y="8" width="240" height="144"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uDW-z7-vhW">
+                                                    <rect key="frame" x="8" y="8" width="260" height="144"/>
                                                 </imageView>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="mEe-lT-BQK">
                                                     <rect key="frame" x="30" y="160" width="216" height="77"/>
@@ -55,8 +54,18 @@
                                                     </state>
                                                 </button>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="uDW-z7-vhW" firstAttribute="height" secondItem="59H-vn-41Q" secondAttribute="height" multiplier="0.523636" id="4aA-wJ-eG9"/>
+                                                <constraint firstItem="uDW-z7-vhW" firstAttribute="leading" secondItem="59H-vn-41Q" secondAttribute="leading" constant="8" id="ady-xN-DdH"/>
+                                                <constraint firstItem="uDW-z7-vhW" firstAttribute="top" secondItem="59H-vn-41Q" secondAttribute="top" constant="8" id="agV-7g-XNG"/>
+                                                <constraint firstAttribute="trailing" secondItem="uDW-z7-vhW" secondAttribute="trailing" constant="8" id="yi3-qc-bAz"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="276" height="275"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="uDW-z7-vhW" id="n7R-G2-oth"/>
+                                            <outlet property="textView" destination="mEe-lT-BQK" id="HH2-D0-1f4"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -64,7 +73,11 @@
                                 <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="816-fn-ofV"/>
-                                    <barButtonItem title="Item" id="tmM-Ln-ctm"/>
+                                    <barButtonItem image="plus.rectangle.fill" catalog="system" id="tmM-Ln-ctm">
+                                        <connections>
+                                            <action selector="addImageButtonPressed:" destination="BYZ-38-t0r" id="NoW-dO-DeF"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="L1N-K8-0PM"/>
                                 </items>
                             </toolbar>
@@ -82,10 +95,16 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="FOk-fw-liZ" id="Cce-56-z2Z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="129.91071428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="plus.rectangle.fill" catalog="system" width="64" height="46"/>
+    </resources>
 </document>
